BUG: sidebar overflow when pulled too far

--- a/treevy_client/src/componentStyles/homePage/side-container/nav-menu-items/navItemLists.css
+++ b/treevy_client/src/componentStyles/homePage/side-container/nav-menu-items/navItemLists.css
@@ -10,7 +10,6 @@
 
 .nav-menu-lists-icon {
   /* color: rgb(77, 110, 102); */
-  fill: white;
   height: 40px;
   width: 50px;
 }
