--- a/treevy_client/src/componentStyles/homePage/side-container/sideMenuBar.css
+++ b/treevy_client/src/componentStyles/homePage/side-container/sideMenuBar.css
@@ -8,12 +8,12 @@
   grid-template-areas: "nav-menu nav-pages blank";
   width: 1000px;
   height: 400px;
-  border: black solid 1px;
+  border: rgb(57, 88, 65) solid 1px;
 }
 
 .nav-menu {
   grid-area: nav-menu;
-  background-color: rgb(191, 211, 206);
+  background-color: rgb(137, 172, 163);
   width: 60px;
   height: 100%;
   display: grid;
@@ -57,12 +57,13 @@
   grid-template-columns: 100% 0%;
   grid-template-areas: ". resize-panel";
 
-  background-color: cornflowerblue;
+  background-color: rgb(207, 207, 207);
   width: 300px;
   height: 100%;
-
   overflow: hidden;
   min-width: 0;
+
+  border-right: rgb(57, 88, 65) solid 1px;
 }
 
 .resize-panel {
